Drop coveralls